--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.5.10",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "sqlite3": "^3.1.4"
   }
 }
