--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.5.10",
     "multer": "^1.2.0",
+    "socket.io-client": "^1.4.8",
     "sqlite3": "^3.1.4"
   }
 }
